--- a/TimeReportProcessing/wwwroot/index.html
+++ b/TimeReportProcessing/wwwroot/index.html
@@ -2,10 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Отчет о временных затратах</title>
-    <style>
-        /* Добавьте базовый CSS для таблицы и формы */
-    </style>
 </head>
 <body>
     <h1>Отчет о временных затратах сотрудников</h1>
